fix: nav-sublist desktop overflow

--- a/themes/headcrash/assets/scss/header/_index.scss
+++ b/themes/headcrash/assets/scss/header/_index.scss
@@ -13,6 +13,7 @@
         --desktop-size: auto;
         --desktop-ul-display: flex;
         --desktop-position: static;
+        --desktop-overflow-y: visible;
         --desktop-sublist-left: auto;
         --desktop-sublist-position: absolute;
         --desktop-sublist-opacity: 0;
@@ -41,7 +42,7 @@
             width: var(--desktop-size, calc(min(22rem, 100vw)));
             min-height: var(--desktop-size, calc(100dvh - 100%));
             max-height: 100%;
-            overflow-y: scroll;
+            overflow-y: var(--desktop-overflow-y, scroll);
             padding: var(--desktop-padding, 0.6rem);
             color: var(--light-bg-color);
             background-color: var(--desktop-border, var(--light-text-color));
@@ -128,13 +129,10 @@
                         & + .header__nav-sublist {
                             pointer-events: all;
                             opacity: 1;
-                            transform: translateY(0);
                         }
                     }
                 }                
             }
-
-
             
             &-item--active > a {
                 color: var(--link-color-light);
